# vio_data_simulation

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindEigen3.cmake
main/: gener_alldata.cpp
python_tool/: GeometryLib.py  draw_points.py  draw_trajcory.py
src/: imu.cpp  imu.h  param.h  utilities.cpp  utilities.h
