CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(imuSimWithPointLine)

# SET(CMAKE_BUILD_TYPE Debug) # Release, RelWithDebInfo , Debug

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release)

SET(LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(LIBRARY_OUTPUT_DIRECTORY_DEBUG ${LIBRARY_OUTPUT_DIRECTORY}/Debug)
SET(LIBRARY_OUTPUT_DIRECTORY_RELEASE ${LIBRARY_OUTPUT_DIRECTORY}/Release)

set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -Wall  -O3 -march=native ")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall  -O3 -march=native")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake_modules/")

find_package(Eigen3 REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Sophus REQUIRED)

include_directories(
  ${EIGEN3_INCLUDE_DIR}
  ${SOPHUS_INCLUDE_DIR} # for both sophus and geographiclib
  ${OPENCV_INCLUDE_DIR}
)

LIST(APPEND LINK_LIBS
${OpenCV_LIBS}
${Sophus_LIBRARIES}
)

ADD_EXECUTABLE(data_gen main/gener_alldata.cpp src/param.h src/param.cpp src/utilities.h src/utilities.cpp src/imu.h src/imu.cpp)
TARGET_LINK_LIBRARIES (data_gen ${LINK_LIBS})

FILE(GLOB_RECURSE RESOURCE_FILES ${CMAKE_SOURCE_DIR}/resources/*)
FILE(COPY ${RESOURCE_FILES} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG})
FILE(COPY ${RESOURCE_FILES} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE})

FILE(GLOB_RECURSE PY_TOOL_FILES ${CMAKE_SOURCE_DIR}/python_tool/*)
FILE(COPY ${PY_TOOL_FILES} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}/python_tool)
FILE(COPY ${PY_TOOL_FILES} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE}/python_tool)

